--- a/Comment-Sentiment-Analysis.ipynb
+++ b/Comment-Sentiment-Analysis.ipynb
@@ -1,20 +1,352 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install and Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "Requirement already satisfied: torch in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (2.4.0)\n",
+      "Requirement already satisfied: torchvision in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (0.19.0)\n",
+      "Requirement already satisfied: torchaudio in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (2.4.0)\n",
+      "Requirement already satisfied: networkx in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.3)\n",
+      "Requirement already satisfied: jinja2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.1.2)\n",
+      "Requirement already satisfied: sympy in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: fsspec in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (2024.6.1)\n",
+      "Requirement already satisfied: filelock in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.15.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torchvision) (9.4.0)\n",
+      "Requirement already satisfied: numpy in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torchvision) (1.24.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from jinja2->torch) (2.1.2)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from sympy->torch) (1.3.0)\n",
+      "Collecting transformers\n",
+      "  Downloading transformers-4.44.0-py3-none-any.whl (9.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (2.28.2)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (4.11.2)\n",
+      "Requirement already satisfied: pandas in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (1.5.3)\n",
+      "Requirement already satisfied: numpy in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (1.24.2)\n",
+      "Collecting safetensors>=0.4.1\n",
+      "  Downloading safetensors-0.4.4-cp310-cp310-macosx_11_0_arm64.whl (381 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m381.9/381.9 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting regex!=2019.12.17\n",
+      "  Downloading regex-2024.7.24-cp310-cp310-macosx_11_0_arm64.whl (278 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m278.9/278.9 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (23.0)\n",
+      "Requirement already satisfied: filelock in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (3.15.4)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (4.64.1)\n",
+      "Collecting tokenizers<0.20,>=0.19\n",
+      "  Downloading tokenizers-0.19.1-cp310-cp310-macosx_11_0_arm64.whl (2.4 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m9.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
+      "\u001b[?25hCollecting huggingface-hub<1.0,>=0.23.2\n",
+      "  Downloading huggingface_hub-0.24.5-py3-none-any.whl (417 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m417.5/417.5 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: idna<4,>=2.5 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (2022.12.7)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (2.1.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (1.26.14)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from beautifulsoup4) (2.3.2.post1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from pandas) (2022.7.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.2)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.6.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Installing collected packages: safetensors, regex, huggingface-hub, tokenizers, transformers\n",
+      "Successfully installed huggingface-hub-0.24.5 regex-2024.7.24 safetensors-0.4.4 tokenizers-0.19.1 transformers-4.44.0\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "!pip install torch torchvision torchaudio\n",
+    "!pip install transformers requests beautifulsoup4 pandas numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import torch\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Instantiate Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1146a604c22a4e2cb85969b9f25ebbf7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/39.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a413d6dbdd904782945344725b6ee494",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/872k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c139f48b20b5489d83b729d45e89fa31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = AutoModelForSequenceClassification.from_pretrained('nlptown/bert-base-multilingual-uncased-sentiment')\n",
+    "tokenizer = AutoTokenizer.from_pretrained('nlptown/bert-base-multilingual-uncased-sentiment')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens1 = tokenizer.encode('This was a decent place to eat', return_tensors='pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = model(tokens1)\n",
+    "int(torch.argmax(result.logits))+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collect Reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = requests.get('https://www.yelp.com/biz/kinkaku-izakaya-kitchener?osq=Restaurants')\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "regex = re.compile('.*comment.*')\n",
+    "results = soup.find_all('p', {'class':regex})\n",
+    "reviews = [result.text for result in results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(np.array(reviews), columns=['review'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sentiment_score(review):\n",
+    "    tokens = tokenizer.encode(review, return_tensors='pt')\n",
+    "    result = model(tokens)\n",
+    "    return int(torch.argmax(result.logits))+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate Sentiment of the Reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>My BF is an alum of UWaterloo and said this wa...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Waterloo has some hidden sushi places. I would...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>We were here twice once for the dine in ayce a...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Visiting from another country -- loved the fac...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I loveeeee the food here, the ratio of salmon ...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Honestly, this was my go-to place for sushi du...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>I'm I would say it was quite disappointing to ...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>I was visiting my friend in Waterloo and for d...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Maybeeee the best sushi I ever had and I've ha...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>This place is the best All You Can Eat (AYCE) ...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  My BF is an alum of UWaterloo and said this wa...          4\n",
+       "1  Waterloo has some hidden sushi places. I would...          3\n",
+       "2  We were here twice once for the dine in ayce a...          3\n",
+       "3  Visiting from another country -- loved the fac...          5\n",
+       "4  I loveeeee the food here, the ratio of salmon ...          5\n",
+       "5  Honestly, this was my go-to place for sushi du...          4\n",
+       "6  I'm I would say it was quite disappointing to ...          2\n",
+       "7  I was visiting my friend in Waterloo and for d...          5\n",
+       "8  Maybeeee the best sushi I ever had and I've ha...          5\n",
+       "9  This place is the best All You Can Eat (AYCE) ...          5"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sentiment'] = df['review'].apply(lambda x: get_sentiment_score(x[:512]))\n",
+    "df"
    ]
   },
   {
