--- a/Comment-Sentiment-Analysis.ipynb
+++ b/Comment-Sentiment-Analysis.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -20,50 +30,54 @@
       "Requirement already satisfied: torchvision in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (0.19.0)\n",
       "Requirement already satisfied: torchaudio in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (2.4.0)\n",
       "Requirement already satisfied: networkx in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.3)\n",
-      "Requirement already satisfied: jinja2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.1.2)\n",
       "Requirement already satisfied: sympy in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (1.13.1)\n",
-      "Requirement already satisfied: fsspec in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (2024.6.1)\n",
       "Requirement already satisfied: filelock in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.15.4)\n",
       "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: jinja2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (3.1.2)\n",
+      "Requirement already satisfied: fsspec in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torch) (2024.6.1)\n",
       "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torchvision) (9.4.0)\n",
       "Requirement already satisfied: numpy in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from torchvision) (1.24.2)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from jinja2->torch) (2.1.2)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from sympy->torch) (1.3.0)\n",
-      "Collecting transformers\n",
-      "  Downloading transformers-4.44.0-py3-none-any.whl (9.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: requests in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (2.28.2)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from sympy->torch) (1.3.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (4.44.0)\n",
+      "Requirement already satisfied: requests in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (2.28.2)\n",
       "Requirement already satisfied: beautifulsoup4 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (4.11.2)\n",
       "Requirement already satisfied: pandas in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (1.5.3)\n",
       "Requirement already satisfied: numpy in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (1.24.2)\n",
-      "Collecting safetensors>=0.4.1\n",
-      "  Downloading safetensors-0.4.4-cp310-cp310-macosx_11_0_arm64.whl (381 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m381.9/381.9 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting regex!=2019.12.17\n",
-      "  Downloading regex-2024.7.24-cp310-cp310-macosx_11_0_arm64.whl (278 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m278.9/278.9 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (23.0)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (0.4.4)\n",
       "Requirement already satisfied: filelock in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (3.15.4)\n",
       "Requirement already satisfied: pyyaml>=5.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: tokenizers<0.20,>=0.19 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (0.19.1)\n",
       "Requirement already satisfied: tqdm>=4.27 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (4.64.1)\n",
-      "Collecting tokenizers<0.20,>=0.19\n",
-      "  Downloading tokenizers-0.19.1-cp310-cp310-macosx_11_0_arm64.whl (2.4 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.4/2.4 MB\u001b[0m \u001b[31m9.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
-      "\u001b[?25hCollecting huggingface-hub<1.0,>=0.23.2\n",
-      "  Downloading huggingface_hub-0.24.5-py3-none-any.whl (417 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m417.5/417.5 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: idna<4,>=2.5 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (2024.7.24)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (23.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from transformers) (0.24.5)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (3.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (2022.12.7)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (2.1.1)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (1.26.14)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from requests) (2.1.1)\n",
       "Requirement already satisfied: soupsieve>1.2 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from beautifulsoup4) (2.3.2.post1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from pandas) (2022.7.1)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.2)\n",
       "Requirement already satisfied: fsspec>=2023.5.0 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.6.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Installing collected packages: safetensors, regex, huggingface-hub, tokenizers, transformers\n",
-      "Successfully installed huggingface-hub-0.24.5 regex-2024.7.24 safetensors-0.4.4 tokenizers-0.19.1 transformers-4.44.0\n"
+      "Requirement already satisfied: six>=1.5 in /Users/yehiafahmy/miniconda3/envs/tensorflow/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
      ]
     }
    ],
@@ -74,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,51 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1146a604c22a4e2cb85969b9f25ebbf7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/39.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a413d6dbdd904782945344725b6ee494",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/872k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c139f48b20b5489d83b729d45e89fa31",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -164,32 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens1 = tokenizer.encode('This was a decent place to eat', return_tensors='pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The score of this sentince is:  4\n"
+     ]
     }
    ],
    "source": [
+    "tokens1 = tokenizer.encode('This was a decent place to eat', return_tensors='pt')\n",
     "result = model(tokens1)\n",
-    "int(torch.argmax(result.logits))+1"
+    "print('The score of this sentince is: ', int(torch.argmax(result.logits))+1)"
    ]
   },
   {
@@ -201,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +300,7 @@
        "9  This place is the best All You Can Eat (AYCE) ...          5"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,13 +309,6 @@
     "df['sentiment'] = df['review'].apply(lambda x: get_sentiment_score(x[:512]))\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
